# gui-labs

./: CMakeLists.txt  README.md
src/idz/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.hpp
src/lab1/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.hpp
src/lab2/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.hpp
src/lab3/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.hpp
src/lab4/: CMakeLists.txt  README.md  main.qml
src/lab5/: CMakeLists.txt  README.md  main.cpp  main.qml
src/lab6/: CMakeLists.txt  README.md  main.qml
src/lab7/: CMakeLists.txt  README.md  main.qml
src/lab8/: CMakeLists.txt  README.md  main.qml
src/lab9/: CMakeLists.txt  README.md  main.cpp  main.qml
